--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v1 
         with:
-          # terraform_version: 0.13.0:
+           terraform_version: 1.0.5:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Format
